src/test/deca/syntax/invalid/expr/test_expr_mult_without_number.deca
// Description:
//    tests de programme syntaxiquement incorrects : AND logique avec un seul &
//
// Resultats:
//    mismatched input ';' expecting {'false', 'new', 'null', 'readInt', 'readFloat', 'this', 'true', IDENT, '-', '(', '!', INT, FLOAT, STRING}
//    
//
// Historique:
//    cree le 01/01/2024

{
    int a = 2;
    a = a *;
}